Remove --enable-preview and included builds